# solid-guide

./: README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: pylint.yml
docs/: README.md
